--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
      crossorigin="anonymous"></script>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Train Your Brain Playing Every day 10 minute"
     />
 
 
