--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="theme-color" content="#06B64C" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+    <link rel="icon" href="https://webapphumanbenchmark.web.app/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -31,18 +31,18 @@
     ></script>
     <!-- <script src="https://www.google.com/recaptcha/enterprise.js?render=6LceCKMnAAAAAFFGZG8noQIZeJTR1jILKFrUaROu"></script> -->
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="https://webapphumanbenchmark.web.app/manifest.json" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="https://webapphumanbenchmark.web.app/manifest.json" />
     <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
+      Notice the use of % https://webapphumanbenchmark.web.app% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      Unlike "/favicon.ico" or "favicon.ico", "% https://webapphumanbenchmark.web.app%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
