--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="theme-color" content="#06B64C" />
-    <link rel="icon" href="https://webapphumanbenchmark.web.app/logo.png" />
+    <link rel="icon" href="https://webapphumanbenchmark.web.app/logo192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
