--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <meta name="theme-color" content="#06B64C" />
-    <link rel="icon" href="https://webapphumanbenchmark.web.app/logo192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -11,6 +10,9 @@
       content="Web site created using create-react-app"
     />
     <!-- Google tag (gtag.js) -->
+ 
+    <script src="path/to/ASCIIMathML.js"></script>
+
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-GLCTRZCK09"
@@ -31,12 +33,12 @@
     ></script>
     <!-- <script src="https://www.google.com/recaptcha/enterprise.js?render=6LceCKMnAAAAAFFGZG8noQIZeJTR1jILKFrUaROu"></script> -->
 
-    <link rel="apple-touch-icon" href="https://webapphumanbenchmark.web.app/manifest.json" />
+    <link rel="apple-touch-icon" href="https://brainbenchmark.mindpuzzlers.com/manifest.json" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="https://webapphumanbenchmark.web.app/manifest.json" />
+    <link rel="manifest" href="https://brainbenchmark.mindpuzzlers.com/manifest.json" />
     <!--
       Notice the use of % https://webapphumanbenchmark.web.app% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -52,7 +54,10 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>Wordle</title>
+    
+    <title>
+      
+      Brain Benchmark </title>
   </head>
   <script>
     // function onClick(e) {
@@ -69,6 +74,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="ASCIIMathML.js"></script>
+   
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
