--- a/public/index.html
+++ b/public/index.html
@@ -10,35 +10,28 @@
       content="Web site created using create-react-app"
     />
     <!-- Google tag (gtag.js) -->
- 
+
     <script src="path/to/ASCIIMathML.js"></script>
 
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-GLCTRZCK09"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-GLCTRZCK09");
-    </script>
-    <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2684572178236927"
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6763007387304477"
       crossorigin="anonymous"
     ></script>
     <!-- <script src="https://www.google.com/recaptcha/enterprise.js?render=6LceCKMnAAAAAFFGZG8noQIZeJTR1jILKFrUaROu"></script> -->
 
-    <link rel="apple-touch-icon" href="https://brainbenchmark.mindpuzzlers.com/manifest.json" />
+    <link
+      rel="apple-touch-icon"
+      href="https://brainbenchmark.upmspboard.com/manifest.json"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="https://brainbenchmark.mindpuzzlers.com/manifest.json" />
+    <link
+      rel="manifest"
+      href="https://brainbenchmark.upmspboard.com/manifest.json"
+    />
     <!--
       Notice the use of % https://webapphumanbenchmark.web.app% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -50,14 +43,14 @@
     -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="shortcut icon" href="./Braingamelogo.png" type="image/x-icon" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    
-    <title>
-      
-      Brain Benchmark </title>
+
+    <title>Brain Benchmark</title>
   </head>
   <script>
     // function onClick(e) {
@@ -75,7 +68,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script src="ASCIIMathML.js"></script>
-   
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
