--- a/public/index.html
+++ b/public/index.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="BRAIN TEST"
+      content="BRAIN GAMES"
     />
     <!-- Google tag (gtag.js) -->
-
-    <script src="path/to/ASCIIMathML.js"></script>
-
     <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6763007387304477"
-      crossorigin="anonymous"
-    ></script>
+    async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6763007387304477"
+    crossorigin="anonymous"
+  ></script>
+    <!-- <script src="path/to/ASCIIMathML.js"></script> -->
+
+  
     <!-- <script src="https://www.google.com/recaptcha/enterprise.js?render=6LceCKMnAAAAAFFGZG8noQIZeJTR1jILKFrUaROu"></script> -->
 
     <link
@@ -67,7 +67,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script src="ASCIIMathML.js"></script>
+    <!-- <script src="ASCIIMathML.js"></script> -->
 
     <!--
       This HTML file is a template.
